Fixed header issue with z-index.

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
 a {
   color: black;
   text-decoration: none;
+  z-index: 1;
 }
 
 .hero-banner-container {
